...
        android:layout_marginTop="13dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnCondutor"
        android:layout_width="353dp"
        android:layout_height="40dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        android:layout_marginTop="16dp"
...
        android:text="Modelo"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="45dp"
        android:layout_marginTop="14dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edtMarca" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Caracterizado"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtPlaca"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/edtPlaca" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Renavam"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="85dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtRenavam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edtModelo"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMarca"
        app:layout_constraintTop_toTopOf="@+id/edtModelo" />

    <EditText
        android:id="@+id/edtModelo"
...
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/edtAno"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/edtAno" />

    <EditText
        android:id="@+id/edtAno"
...
    <EditText
        android:id="@+id/edtRenavam"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toLeftOf="@+id/spnTipoVeiculo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup7"
        android:layout_marginTop="71dp"
        tools:layout_constraintLeft_creator="1"
...
            android:layout_weight="1"
            android:checked="false"
            android:text="Sim" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvarObjetoOcorrencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="@+id/textView24"
...
