<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.dev.bollha.tcc_prototipo.control.AtorControl"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sexo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-9dp"
        android:layout_marginRight="249dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="598dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="Ex: Maxwell Cravo"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:checkedButton="@+id/rdbMasc"
        android:orientation="horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rdbMasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Masculino" />

        <RadioButton
            android:id="@+id/rdbFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nacionalidade"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtNome"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/edtNome" />

    <Spinner
        android:id="@+id/spnNacionalidade"
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Documento"
        android:layout_marginRight="405dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rdgSexo" />

    <EditText
        android:id="@+id/edtDocumento"
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="CPF/CNH ou RG"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Idade"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/spnNacionalidade"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/spnNacionalidade" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="Ex: 42"
        android:inputType="number"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtIdade"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gravidade"
        android:layout_marginTop="-2dp"
        app:layout_constraintTop_toBottomOf="@+id/edtDocumento"
        android:layout_marginRight="415dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/spnGravidade"
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarAtor"
        app:layout_constraintVertical_bias="0.005"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnSalvarAtor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo Ator"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/edtIdade"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/edtIdade" />

    <Spinner
        android:id="@+id/spnTipoAtor"
        android:layout_width="470dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView15"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvarAtor"
        app:layout_constraintVertical_bias="0.035" />

</android.support.constraint.ConstraintLayout>
